--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="home">
     <!-- Navbar -->
     <nav id="navbar">
-        <h1 class="logo"><i class="fa fa-dumpster"></i><a href="#home"><span class="text-primary">LSRO</span></a></h1>
+        <h1 class="logo"><i class="fa fa-dumpster"></i><a href="#home"><span class="text-primary">Lone Star Roll Offs</span></a></h1>
         <ul id="social-media">
             <li><a href="https://www.facebook.com/people/Lone-Star-Roll-Offs/100093626220803/" target="blank"><i class="fab fa-facebook text-primary"></i></a></li>
             <!-- <li><a href="" target="blank"><i class="fab fa-instagram"></i></a></li> -->
@@ -72,7 +72,7 @@
     <section id="contact">
         <div class="bg-black">
             <form class="lead" name="contact-form" method="POST" data-netlify="true">
-                <h1 class="l-heading text-center text-light">CONTACT US</h1>
+                <h1 class="l-heading text-center text-light">CONTACT</h1>
 
                 <div class="form-group">
                     <label for="name">Name: </label>
