--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <label for="message">Message: </label>
                     <textarea id="message" name="message" type="text"></textarea>
                 </div>
-                <button id="input-submit" type="submit" name="submit" class="btn-dark">Submit</button>
+                <button id="input-submit" type="submit" name="submit" class="btn-light">Submit</button>
             </form>
         </div>
 
