--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
     <title>Lone Star Roll Offs🤘🏽</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
 </head>
 
 <body id="home">
     <!-- Navbar -->
     <nav id="navbar">
-        <h1 class="logo"><i class="fa fa-dumpster"></i><a href="#home"><span class="text-primary">Lone Star Roll Offs</span></a></h1>
+        <h1 class="logo"><i class="fa fa-dumpster"></i><a href="#home"><span class="text-primary">Lone Star Roll
+                    Offs</span></a></h1>
         <ul id="social-media">
-            <li><a href="https://www.facebook.com/people/Lone-Star-Roll-Offs/100093626220803/" target="blank"><i class="fab fa-facebook text-primary"></i></a></li>
-            <!-- <li><a href="" target="blank"><i class="fab fa-instagram"></i></a></li> -->
+            <li><a href="https://www.facebook.com/people/Lone-Star-Roll-Offs/100093626220803/" target="blank"><i
+                        class="fab fa-facebook text-primary"></i></a></li>
+            <li><a href="https://www.instagram.com/Lonestar_rolloffs/" target="blank"><i
+                        class="fab fa-instagram"></i></a></li>
+            <li><a href="tel:832-909-3959"><i class="fa fa-phone"></i></a></li>
+
             </li>
         </ul>
         <ul>
@@ -29,17 +34,19 @@
 
     <!-- Landing Page -->
     <div id="showcase" class="bottom-shadow">
-            <div class="showcase-text bg-dark">
-                <h1 class="primary-heading text-light">Texan Owned, Veteran Operated.</h1>
-            </div>
-            <div class="showcase-img"></div>
+        <div class="showcase-text bg-dark">
+            <h1 class="primary-heading text-light">Texan Owned, Veteran Operated.</h1>
         </div>
+        <div class="showcase-img"></div>
+    </div>
     <section id="about">
         <div class="about-text bg-black text-center">
             <h1 class="l-heading text-center text-light">ABOUT</h1>
             <p class="lead text-light">
-                Lone Star Roll Offs is Veteran operated and 100% Texan owned local business. Established in 2023, we specialize in removing construction waste from your residential renovation project,
-                to larger construction sites. We will also haul off your yard waste if you are clearing land. Our current inventory includes 3-7'X14'X5' 17 yard capacity roll off dumpsters. We ensure
+                Lone Star Roll Offs is Veteran operated and 100% Texan owned local business. Established in 2023, we
+                specialize in removing construction waste from your residential renovation project,
+                to larger construction sites. We will also haul off your yard waste if you are clearing land. Our
+                current inventory includes 3-7'X14'X5' 17 yard capacity roll off dumpsters. We ensure
                 a clean pick up and drop off experience.
             </p>
         </div>
@@ -73,24 +80,25 @@
         <div class="bg-black">
             <form class="lead" name="contact-form" method="POST" data-netlify="true">
                 <h1 class="l-heading text-center text-light">CONTACT</h1>
-
-                <div class="form-group">
-                    <label for="name">Name: </label>
-                    <input id="name" name="name" type="text">
+                <div class="container">
+                    <div class="form-group">
+                        <label for="name">Name: </label>
+                        <input id="name" name="name" type="text">
+                    </div>
+                    <div class="form-group">
+                        <label for="phone">Phone Number: </label>
+                        <input id="phone" name="phone" type="tel">
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email: </label>
+                        <input id="email" name="email" type="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message: </label>
+                        <textarea id="message" name="message" type="text"></textarea>
+                    </div>
+                    <button id="input-submit" type="submit" name="submit" class="btn-light">Submit</button>
                 </div>
-                <div class="form-group">
-                    <label for="phone">Phone Number: </label>
-                    <input id="phone" name="phone" type="tel">
-                </div>
-                <div class="form-group">
-                    <label for="email">Email: </label>
-                    <input id="email" name="email" type="email">
-                </div>
-                <div class="form-group">
-                    <label for="message">Message: </label>
-                    <textarea id="message" name="message" type="text"></textarea>
-                </div>
-                <button id="input-submit" type="submit" name="submit" class="btn-light">Submit</button>
             </form>
         </div>
 
