remove contact form and telephone

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         class="fab fa-facebook text-primary"></i></a></li>
             <li><a href="https://www.instagram.com/Lonestar_rolloffs/" target="blank"><i
                         class="fab fa-instagram"></i></a></li>
-            <li><a href="tel:832-909-3959"><i class="fa fa-phone"></i></a></li>
+            <!-- <li><a href="tel:832-909-3959"><i class="fa fa-phone"></i></a></li> -->
 
             </li>
         </ul>
@@ -47,7 +47,7 @@
                 specialize in removing construction waste from your residential renovation project,
                 to larger construction sites. We will also haul off your yard waste if you are clearing land. Our
                 current inventory includes 3-7'X14'X5' 17 yard capacity roll off dumpsters. We ensure
-                a clean pick up and drop off experience.
+                a clean pick up and drop off experience. We proudly service the Greater Houston area.
             </p>
         </div>
     </section>
@@ -76,7 +76,7 @@
     </section> -->
 
     <!--CONTACT-->
-    <section id="contact">
+    <!-- <section id="contact">
         <div class="bg-black">
             <form class="lead" name="contact-form" method="POST" data-netlify="true">
                 <h1 class="l-heading text-center text-light">CONTACT</h1>
@@ -102,7 +102,7 @@
             </form>
         </div>
 
-    </section>
+    </section> -->
 
     <section id="footer">
         <div class="bg-dark">
