update contact section

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
     </section> -->
 
     <!--CONTACT-->
-    <!-- <section id="contact">
+    <section id="contact">
         <div class="bg-black">
-            <form class="lead" name="contact-form" method="POST" data-netlify="true">
+            <h1 class="l-heading text-center text-light">CONTACT</h1>
+            <p class="lead text-light text-center">Lone Star Roll Offs is no longer in business. We thank you for your patronage.</p>
+            <!-- <form class="lead" name="contact-form" method="POST" data-netlify="true">
                 <h1 class="l-heading text-center text-light">CONTACT</h1>
                 <div class="container">
                     <div class="form-group">
@@ -99,10 +101,10 @@
                     </div>
                     <button id="input-submit" type="submit" name="submit" class="btn-light">Submit</button>
                 </div>
-            </form>
-        </div>
+            </form> -->
 
-    </section> -->
+        </div>
+    </section>
 
     <section id="footer">
         <div class="bg-dark">
